Fix minor layout issues

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ opacity: 1;
     /* padding: 0.3rem 1rem 0.3rem 1rem; */
     align-items: stretch;
     padding: 0.3rem 1rem 0.3rem 1rem;
+    border-bottom: #858585 0.05rem solid;
 }
 
 .header>button {
@@ -513,7 +514,9 @@ opacity: 1;
 }
 
 .latest-news h2 {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    padding-left: 1rem;
+    font-weight: 400;
 }
 
 .news-feed {
